test/src/e2e_vm_tests/test_programs/should_fail/impure_abi_read_calls_impure_write/src/main.sw
contract;

abi MyContract {
    #[storage(read)]
    fn test_function() -> bool;
}

impl MyContract for Contract {
    #[storage(read)]
    fn test_function() -> bool {
        f()
    }
}

#[storage(write)]
fn f() -> bool {
    let _ = __state_store_word(b256::zero(), 0);
    true
}
